Removed old code and some changes forgot in previous commit

--- a/BIOP_SamplesPreparation.ipynb
+++ b/BIOP_SamplesPreparation.ipynb
@@ -6,22 +6,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/jw01-aruk-home01/projects/precision_medicine_ml/tensorflow2.2_gpu/lib/python3.8/site-packages/pandas/io/stata.py:1433: UnicodeWarning: \n",
-      "One or more strings in the dta file could not be decoded using utf-8, and\n",
-      "so the fallback encoding of latin-1 is being used.  This can happen when a file\n",
-      "has been incorrectly encoded by Stata or some other software. You should verify\n",
-      "the string values returned are correct.\n",
-      "  warnings.warn(msg, UnicodeWarning)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10976, 328)\n"
+      "(12232, 283)\n"
      ]
     }
    ],
@@ -29,7 +17,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "biop_data = pd.read_stata(\"../../data/braggss/analysis_elig_dayson.dta\")\n",
+    "# biop_data = pd.read_stata(\"../data/braggss/biop_analysis_elig_dayson.dta\")\n",
+    "biop_data = pd.read_stata(\"../data/braggss/analysisCRP.dta\")\n",
+    "had_data = pd.read_stata(\"../data/braggss/biop_tbl_treatment_beliefs.dta\")\n",
     "\n",
     "print(biop_data.shape)"
    ]
@@ -59,6 +49,11 @@
     "    biop_data_c = biop_data.iloc[idx]\n",
     "    biop_data_c = biop_data_c.reset_index()\n",
     "    \n",
+    "    had_idx = np.where(had_data['fupno'] == n)[0]\n",
+    "    fup_had_data = had_data.iloc[had_idx].reset_index(drop = True)\n",
+    "    \n",
+    "    biop_data_c = biop_data_c.merge(fup_had_data[['sample_id', 'had_anxiety', 'grhad_anx', 'had_depress', 'grhad_depr']], how = 'left')\n",
+    "    \n",
     "    biop_data_dir[n] = biop_data_c"
    ]
   },
@@ -68,13 +63,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ageonset = np.array([x.days for x in (pd.to_datetime(biop_data_dir[0]['year_diag']) - pd.to_datetime(biop_data_dir[0]['dob']))]) / 365.25\n",
+    "age_baseline = np.array([x.days for x in (pd.to_datetime(biop_data_dir[0]['start_date_intbl_bio']) - pd.to_datetime(biop_data_dir[0]['dob']))]) / 365.25\n",
+    "disease_duration = age_baseline - ageonset\n",
+    "\n",
+    "ageonset[ageonset < 0] = np.nan\n",
+    "disease_duration[disease_duration < 0] = np.nan\n",
+    "\n",
+    "biop_data_dir[0]['disease_duration'] = disease_duration\n",
+    "biop_data_dir[0]['age_onset'] = ageonset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of patients stopped before first FUP due to efficacy: 63\n"
+     ]
+    }
+   ],
+   "source": [
+    "efficacy_stop = np.zeros(biop_data_dir[0].shape[0])\n",
+    "efficacy_stop[np.where(np.logical_and(biop_data_dir[0]['inelig'] == 'stopped first bio < 3mth', biop_data_dir[0]['stop_reason_intbl_bio'] == 'Inefficacy'))[0]] = 1\n",
+    "print('Number of patients stopped before first FUP due to efficacy:', np.count_nonzero(efficacy_stop))\n",
+    "\n",
+    "biop_data_dir[0]['efficacy_stop'] = efficacy_stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "biop_data_sets = []\n",
     "\n",
     "for n in fupno_vals:\n",
     "    das_columns = ['das_swol', 'das_tend', 'das_pat_global', 'das_crp', 'das_esr', 'crp_bioC']\n",
     "    \n",
     "    if n == 0:\n",
-    "        columns = ['sample_id', 'acr_rfpos', 'first_bio', 'weight_intbl_baseline', 'height', 'disease_duration', 'smoking', 'drug_id_intbl_bio', 'age_onset', 'current_dmard', 'gender', 'haq_score']\n",
+    "        columns = ['sample_id', 'acr_rfpos', 'first_bio', 'weight_intbl_baseline', 'height', 'disease_duration', 'smoking', 'drug_id_intbl_bio', 'age_onset', 'current_dmard', 'gender', 'haq_score', 'had_anxiety', 'grhad_anx', 'had_depress', 'grhad_depr', 'efficacy_stop']\n",
     "    else:\n",
     "        columns = ['sample_id']\n",
     "    columns.extend(das_columns)\n",
@@ -92,44 +125,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "bl_crp = biop_data_sets[0]['crp_bioC.0'].to_numpy()\n",
+    "new_crp_flag = np.zeros(bl_crp.shape[0])\n",
+    "new_crp_flag[np.where(~pd.isnull(bl_crp))[0]] = 1\n",
     "crp_idx = np.where(np.logical_and(pd.isnull(bl_crp), ~pd.isnull(biop_data_sets[0]['das_crp.0'])))[0]\n",
     "bl_crp[crp_idx] = biop_data_sets[0]['das_crp.0'].iloc[crp_idx]\n",
     "\n",
     "bl_crp[bl_crp < 0] = np.nan\n",
     "\n",
-    "biop_data_sets[0]['das_crp_comb.0'] = np.maximum(bl_crp, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fu_crp = biop_data_sets[2]['crp_bioC.2'].to_numpy()\n",
-    "crp_idx = np.where(np.logical_and(pd.isnull(fu_crp), ~pd.isnull(biop_data_sets[2]['das_crp.2'])))[0]\n",
-    "fu_crp[crp_idx] = biop_data_sets[2]['das_crp.2'].iloc[crp_idx]\n",
-    "\n",
-    "fu_crp[fu_crp < 0] = np.nan\n",
-    "\n",
-    "biop_data_sets[2]['das_crp_comb.2'] = fu_crp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "biop_output_data = biop_data_sets[0].astype({'drug_id_intbl_bio': 'str'})\n",
-    "\n",
-    "for n in [2]:\n",
-    "    biop_output_data = biop_output_data.merge(biop_data_sets[n], on = 'sample_id', how = 'left')"
+    "biop_data_sets[0]['das_crp_comb.0'] = np.maximum(bl_crp, 0)\n",
+    "biop_data_sets[0]['new_crp_flag.0'] = new_crp_flag"
    ]
   },
   {
@@ -138,12 +147,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "biop_output_data = biop_output_data.merge(acpa_dataframe, how = 'left')"
+    "fu_crp = biop_data_sets[1]['crp_bioC.1'].to_numpy()\n",
+    "new_crp_flag = np.zeros(fu_crp.shape[0])\n",
+    "new_crp_flag[np.where(~pd.isnull(fu_crp))[0]] = 1\n",
+    "crp_idx = np.where(np.logical_and(pd.isnull(fu_crp), ~pd.isnull(biop_data_sets[1]['das_crp.1'])))[0]\n",
+    "fu_crp[crp_idx] = biop_data_sets[1]['das_crp.1'].iloc[crp_idx]\n",
+    "\n",
+    "fu_crp[fu_crp < 0] = np.nan\n",
+    "\n",
+    "biop_data_sets[1]['das_crp_comb.1'] = np.maximum(fu_crp, 0)\n",
+    "biop_data_sets[1]['new_crp_flag.1'] = new_crp_flag"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fu_crp = biop_data_sets[2]['crp_bioC.2'].to_numpy()\n",
+    "new_crp_flag = np.zeros(fu_crp.shape[0])\n",
+    "new_crp_flag[np.where(~pd.isnull(fu_crp))[0]] = 1\n",
+    "crp_idx = np.where(np.logical_and(pd.isnull(fu_crp), ~pd.isnull(biop_data_sets[2]['das_crp.2'])))[0]\n",
+    "fu_crp[crp_idx] = biop_data_sets[2]['das_crp.2'].iloc[crp_idx]\n",
+    "\n",
+    "fu_crp[fu_crp < 0] = np.nan\n",
+    "\n",
+    "biop_data_sets[2]['das_crp_comb.2'] = fu_crp\n",
+    "biop_data_sets[2]['new_crp_flag.2'] = new_crp_flag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "biop_output_data = biop_data_sets[0].astype({'drug_id_intbl_bio': 'str'})\n",
+    "\n",
+    "for n in [1, 2]:\n",
+    "    biop_output_data = biop_output_data.merge(biop_data_sets[n], on = 'sample_id', how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "biop_output_data = biop_output_data.merge(acpa_dataframe, how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,22 +246,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['10436.0', '10437.0', '10449.0', 'BS Etan(Benepali)',\n",
+       "array(['10452.0', '10453.0', '10455.0', 'BS Etan(Benepali)',\n",
        "       'BS Etan(Erelzi)', 'BS Inflix(Inflectra)', 'BS Inflix(Remsima)',\n",
        "       'BS Ritux(Rixathon)', 'BS Ritux(Truxima)',\n",
        "       'Baricitinib (Olumiant)', 'Biosimilar Adalimumab (Amgevita)',\n",
-       "       'Certolizumab', 'Other biologic', 'Tofacit(Xeljanz)', 'abatacept',\n",
-       "       'adalimumab', 'etanercept', 'golimumab', 'infliximab', 'nan',\n",
-       "       'rituximab', 'tocilizumab'], dtype=object)"
+       "       'Biosimilar Adalimumab (Hyrimoz)',\n",
+       "       'Biosimilar Adalimumab (Imraldi)', 'Certolizumab',\n",
+       "       'Other biologic', 'Tofacit(Xeljanz)', 'abatacept', 'adalimumab',\n",
+       "       'etanercept', 'golimumab', 'infliximab', 'nan', 'rituximab',\n",
+       "       'tocilizumab'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "biop_output_data = biop_output_data.rename(columns = {'das_pat_global.0': 'das_vas.0', 'das_pat_global.2': 'das_vas.2', 'acr_rfpos': 'RFPOS', 'weight_intbl_baseline': 'WEIGHT', 'height': 'HEIGHT', 'disease_duration': 'DISDUR', 'age_onset': 'AGEONSET', 'haq_score': 'HAQ', 'acpa_positive': 'ACPA', 'das_crp_comb.0': 'crp.0', 'das_crp_comb.2': 'crp.2', 'das_esr.0': 'esr.0', 'das_esr.2': 'esr.2'})"
+    "biop_output_data = biop_output_data.rename(columns = {'das_pat_global.0': 'das_vas.0', 'das_pat_global.1': 'das_vas.1', 'das_pat_global.2': 'das_vas.2', 'acr_rfpos': 'RFPOS', 'weight_intbl_baseline': 'WEIGHT', 'height': 'HEIGHT', 'disease_duration': 'DISDUR', 'age_onset': 'AGEONSET', 'haq_score': 'HAQ', 'acpa_positive': 'ACPA', 'had_anxiety': 'HAD_A', 'grhad_anx': 'HAD_A_CAT', 'had_depress': 'HAD_D', 'grhad_depr': 'HAD_D_CAT', 'das_crp_comb.0': 'crp.0', 'das_crp_comb.1': 'crp.1', 'das_crp_comb.2': 'crp.2', 'das_esr.0': 'esr.0', 'das_esr.1': 'esr.1', 'das_esr.2': 'esr.2'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -308,14 +367,17 @@
       "text/plain": [
        "Index(['sample_id', 'RFPOS', 'first_bio', 'WEIGHT', 'HEIGHT', 'DISDUR',\n",
        "       'smoking', 'drug_id_intbl_bio', 'AGEONSET', 'current_dmard', 'gender',\n",
-       "       'HAQ', 'das_swol.0', 'das_tend.0', 'das_vas.0', 'das_crp.0', 'esr.0',\n",
-       "       'crp_bioC.0', 'crp.0', 'das_swol.2', 'das_tend.2', 'das_vas.2',\n",
-       "       'das_crp.2', 'esr.2', 'crp_bioC.2', 'crp.2', 'ACPA', 'FIRSTBIO', 'SEX',\n",
-       "       'SMOKE', 'BIO', 'CONCURRENT_DMARD', 'SERO'],\n",
+       "       'HAQ', 'HAD_A', 'HAD_A_CAT', 'HAD_D', 'HAD_D_CAT', 'efficacy_stop',\n",
+       "       'das_swol.0', 'das_tend.0', 'das_vas.0', 'das_crp.0', 'esr.0',\n",
+       "       'crp_bioC.0', 'crp.0', 'new_crp_flag.0', 'das_swol.1', 'das_tend.1',\n",
+       "       'das_vas.1', 'das_crp.1', 'esr.1', 'crp_bioC.1', 'crp.1',\n",
+       "       'new_crp_flag.1', 'das_swol.2', 'das_tend.2', 'das_vas.2', 'das_crp.2',\n",
+       "       'esr.2', 'crp_bioC.2', 'crp.2', 'new_crp_flag.2', 'ACPA', 'FIRSTBIO',\n",
+       "       'SEX', 'SMOKE', 'BIO', 'CONCURRENT_DMARD', 'SERO'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,21 +406,33 @@
     "    data = {'sample_id': row['sample_id']}\n",
     "    \n",
     "    crp_bl = [~pd.isnull(row[x]) for x in ['das_swol.0', 'das_tend.0', 'das_vas.0', 'crp.0']]\n",
+    "    crp_1_fu = [~pd.isnull(row[x]) for x in ['das_swol.1', 'das_tend.1', 'das_vas.1', 'crp.1']]\n",
     "    crp_fu = [~pd.isnull(row[x]) for x in ['das_swol.2', 'das_tend.2', 'das_vas.2', 'crp.2']]\n",
     "    esr_bl = [~pd.isnull(row[x]) for x in ['das_swol.0', 'das_tend.0', 'das_vas.0', 'esr.0']]\n",
+    "    esr_1_fu = [~pd.isnull(row[x]) for x in ['das_swol.1', 'das_tend.1', 'das_vas.1', 'esr.1']]\n",
     "    esr_fu = [~pd.isnull(row[x]) for x in ['das_swol.2', 'das_tend.2', 'das_vas.2', 'esr.2']]\n",
+    "    \n",
     "    if functools.reduce(np.logical_and, crp_bl):\n",
     "        crp_bl_das = calc_crp_das(row['das_tend.0'], row['das_swol.0'], row['das_vas.0'], row['crp.0'])\n",
     "        \n",
     "        data['das28crp.0'] = crp_bl_das\n",
+    "    if functools.reduce(np.logical_and, crp_1_fu):\n",
+    "        crp_1_fu_das = calc_crp_das(row['das_tend.1'], row['das_swol.1'], row['das_vas.1'], row['crp.1'])\n",
+    "        \n",
+    "        data['das28crp.1'] = crp_1_fu_das\n",
     "    if functools.reduce(np.logical_and, crp_fu):\n",
     "        crp_fu_das = calc_crp_das(row['das_tend.2'], row['das_swol.2'], row['das_vas.2'], row['crp.2'])\n",
     "        \n",
     "        data['das28crp.2'] = crp_fu_das\n",
+    "        \n",
     "    if functools.reduce(np.logical_and, esr_bl):\n",
     "        esr_bl_das = calc_esr_das(row['das_tend.0'], row['das_swol.0'], row['das_vas.0'], row['esr.0'])\n",
     "        \n",
     "        data['das28esr.0'] = esr_bl_das\n",
+    "    if functools.reduce(np.logical_and, esr_1_fu):\n",
+    "        esr_1_fu_das = calc_crp_das(row['das_tend.1'], row['das_swol.1'], row['das_vas.1'], row['esr.1'])\n",
+    "        \n",
+    "        data['das28esr.1'] = esr_1_fu_das\n",
     "    if functools.reduce(np.logical_and, esr_fu):\n",
     "        esr_fu_das = calc_esr_das(row['das_tend.2'], row['das_swol.2'], row['das_vas.2'], row['esr.2'])\n",
     "        \n",
@@ -373,12 +447,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_columns = ['sample_id', 'das_swol.0', 'das_tend.0', 'das_vas.0', 'crp.0', 'esr.0', 'das_swol.2', 'das_tend.2', 'das_vas.2', 'crp.2', 'esr.2', \n",
-    "                  'das28crp.0', 'das28crp.2', 'das28esr.0', 'das28esr.2', 'RFPOS', 'FIRSTBIO', 'WEIGHT', 'HEIGHT', 'DISDUR', 'SMOKE', 'BIO', 'AGEONSET', 'CONCURRENT_DMARD', 'SEX', 'HAQ', 'ACPA', 'SERO']\n",
+    "output_columns = ['sample_id', 'das_swol.0', 'das_tend.0', 'das_vas.0', 'crp.0', 'esr.0', 'das_swol.1', 'das_tend.1', 'das_vas.1', 'crp.1', 'esr.1', 'das_swol.2', 'das_tend.2', 'das_vas.2', 'crp.2', 'esr.2', \n",
+    "                  'das28crp.0', 'das28crp.1', 'das28crp.2', 'das28esr.0', 'das28esr.1', 'das28esr.2', 'new_crp_flag.0', 'new_crp_flag.1', 'new_crp_flag.2', 'RFPOS', 'FIRSTBIO', 'WEIGHT', 'HEIGHT', 'DISDUR', 'SMOKE', 'BIO', 'AGEONSET', 'CONCURRENT_DMARD', 'SEX', 'HAQ', 'ACPA', 'SERO', 'HAD_A', 'HAD_A_CAT', 'HAD_D', 'HAD_D_CAT', 'efficacy_stop']\n",
     "\n",
     "biop_output_data[output_columns].to_csv('./data/biop_clinical.csv', index = False)"
    ]
