--- a/EvalDev.ipynb
+++ b/EvalDev.ipynb
@@ -70,18 +70,72 @@
     "        \n",
     "    print('---------')\n",
     "    print(f'Performance for {das_type} - {treatment} - {outcome_col}')\n",
-    "    print(f'Acc: {acc:0.4f}')\n",
-    "    print(f'Adjusted Acc Measure: {adjusted_brier_score:0.4f} +/- {acc_iqr:0.4f} (IQR: {acc_lower_bound:0.4f} - {acc_uper_bound:0.4f})')\n",
-    "    print(f'AUC: {auc:0.4f}')\n",
-    "    print(f'Adjusted AUC: {adjusted_auc:0.4f} +/- {auc_iqr:0.4f} (IQR: {auc_lower_bound:0.4f} - {auc_upper_bound:0.4f})')\n",
+    "    print(f'Acc: {acc:0.3f}')\n",
+    "    print(f'Adjusted Acc Measure: {adjusted_brier_score:0.3f} +/- {acc_iqr:0.3f} (IQR: {acc_lower_bound:0.3f} - {acc_uper_bound:0.3f})')\n",
+    "    print(f'AUC: {auc:0.3f}')\n",
+    "    print(f'Adjusted AUC: {adjusted_auc:0.3f} +/- {auc_iqr:0.3f} (IQR: {auc_lower_bound:0.3f} - {auc_upper_bound:0.3f})')\n",
     "    \n",
     "    for idx, _ in enumerate(adjusted_citl):\n",
-    "        print(f'Citl_{idx}: {citl[idx]:0.4f}')\n",
-    "        print(f'Adjusted CITL_{idx}: {adjusted_citl[idx]:0.4f} +/- {citl_iqr[idx]:0.4f} (IQR: {citl_lower_bound[idx]:0.4f} - {citl_upper_bound[idx]:0.4f})')\n",
+    "        print(f'Citl_{idx}: {citl[idx]:0.3f}')\n",
+    "        print(f'Adjusted CITL_{idx}: {adjusted_citl[idx]:0.3f} +/- {citl_iqr[idx]:0.3f} (IQR: {citl_lower_bound[idx]:0.3f} - {citl_upper_bound[idx]:0.3f})')\n",
     "    for idx, _ in enumerate(adjusted_cal_slope):\n",
-    "        print(f'Slope_{idx}: {cal_slope[idx]:0.4f}')\n",
-    "        print(f'Adjusted Cal Slope_{idx}: {adjusted_cal_slope[idx]:0.4f} +/- {cal_slope_iqr[idx]:0.4f} (IQR: {cal_slope_lower_bound[idx]:0.4f} - {cal_slope_upper_bound[idx]:0.4f})')\n",
+    "        print(f'Slope_{idx}: {cal_slope[idx]:0.3f}')\n",
+    "        print(f'Adjusted Cal Slope_{idx}: {adjusted_cal_slope[idx]:0.3f} +/- {cal_slope_iqr[idx]:0.3f} (IQR: {cal_slope_lower_bound[idx]:0.3f} - {cal_slope_upper_bound[idx]:0.3f})')\n",
     "    \n",
+    "    print('---------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_adjusted_cont_metrics(das_type, treatment, outcome_col = '2cdas_fu'):\n",
+    "    apparent_res_struct = pickle.load(open(f'./data/results/{treatment}/{outcome_col}/{das_type}_{treatment}_{outcome_col}_apparent_eval.data', \"rb\"))\n",
+    "    \n",
+    "    boot_files = glob.glob(f'./data/results/{treatment}/{outcome_col}/bootstraps/{das_type}*.data')\n",
+    "    \n",
+    "    n_boot_files = len(boot_files)\n",
+    "    print(f'Processing {n_boot_files} bootstrap files')\n",
+    "    \n",
+    "    mae_optimism = np.zeros(n_boot_files)\n",
+    "    mse_optimism = np.zeros(n_boot_files)\n",
+    "    r2_optimism = np.zeros(n_boot_files)\n",
+    "    \n",
+    "    for idx, boot_file in enumerate(boot_files):\n",
+    "        res_struct = pickle.load(open(boot_file, \"rb\"))\n",
+    "        \n",
+    "        mae_optimism[idx] = res_struct['boot_apparent_performance']['mae'] - res_struct['mae']\n",
+    "        mse_optimism[idx] = res_struct['boot_apparent_performance']['mse'] - res_struct['mse']\n",
+    "        r2_optimism[idx] = res_struct['boot_apparent_performance']['r2'] - res_struct['r2']\n",
+    "        \n",
+    "    mae = apparent_res_struct['mae']\n",
+    "    adjusted_mae = mae - np.mean(mae_optimism)\n",
+    "    mae_iqr = apparent_res_struct['mae_values_iqr']\n",
+    "    mae_lower_bound = adjusted_mae - mae_iqr\n",
+    "    mae_uper_bound = adjusted_mae + mae_iqr\n",
+    "    \n",
+    "    mse = apparent_res_struct['mse']\n",
+    "    adjusted_mse = mse - np.mean(mse_optimism)\n",
+    "    mse_iqr = apparent_res_struct['mse_values_iqr']\n",
+    "    mse_lower_bound = adjusted_mse - mse_iqr\n",
+    "    mse_uper_bound = adjusted_mse + mse_iqr\n",
+    "    \n",
+    "    r2 = apparent_res_struct['r2']\n",
+    "    adjusted_r2 = r2 - np.mean(r2_optimism)\n",
+    "    r2_iqr = apparent_res_struct['r2_iqr']\n",
+    "    r2_lower_bound = adjusted_r2 - r2_iqr\n",
+    "    r2_uper_bound = adjusted_r2 + r2_iqr\n",
+    "        \n",
+    "    print('---------')\n",
+    "    print(f'Performance for {das_type} - {treatment} - {outcome_col}')\n",
+    "    print(f'MAE: {mae:0.3f}')\n",
+    "    print(f'Adjusted MAE: {adjusted_mae:0.3f} +/- {mae_iqr:0.3f} (IQR: {mae_lower_bound:0.3f} - {mae_uper_bound:0.3f})')\n",
+    "    print(f'MSE: {mse:0.3f}')\n",
+    "    print(f'Adjusted MSE: {adjusted_mse:0.3f} +/- {mse_iqr:0.3f} (IQR: {mse_lower_bound:0.3f} - {mse_uper_bound:0.3f})')\n",
+    "    print(f'R2: {r2:0.3f}')\n",
+    "    print(f'Adjusted R2: {adjusted_r2:0.3f} +/- {r2_iqr:0.3f} (IQR: {r2_lower_bound:0.3f} - {r2_uper_bound:0.3f})')\n",
     "    print('---------')"
    ]
   },
@@ -96,21 +150,21 @@
      "text": [
       "Processing 500 bootstrap files\n",
       "---------\n",
-      "Performance for crp - etanercept - class_bin\n",
-      "Acc: 0.2200\n",
-      "Adjusted Acc Measure: 0.2391 +/- 0.0013 (IQR: 0.2378 - 0.2403)\n",
-      "AUC: 0.7026\n",
-      "Adjusted AUC: 0.6517 +/- 0.0040 (IQR: 0.6478 - 0.6557)\n",
-      "Citl_0: -0.0006\n",
-      "Adjusted CITL_0: 0.0238 +/- 0.0121 (IQR: 0.0117 - 0.0360)\n",
-      "Slope_0: 1.0017\n",
-      "Adjusted Cal Slope_0: 0.7167 +/- 0.0249 (IQR: 0.6918 - 0.7416)\n",
+      "Performance for crp - etanercept - class_poor\n",
+      "Acc: 0.140\n",
+      "Adjusted Acc Measure: 0.148 +/- 0.000 (IQR: 0.147 - 0.148)\n",
+      "AUC: 0.703\n",
+      "Adjusted AUC: 0.658 +/- 0.002 (IQR: 0.656 - 0.660)\n",
+      "Citl_0: -0.001\n",
+      "Adjusted CITL_0: -0.315 +/- 0.017 (IQR: -0.332 - -0.299)\n",
+      "Slope_0: 1.000\n",
+      "Adjusted Cal Slope_0: 0.765 +/- 0.011 (IQR: 0.755 - 0.776)\n",
       "---------\n"
      ]
     }
    ],
    "source": [
-    "print_adjusted_metrics('crp', 'etanercept')"
+    "print_adjusted_metrics('crp', 'etanercept', outcome_col = 'class_poor')"
    ]
   },
   {
@@ -124,21 +178,21 @@
      "text": [
       "Processing 500 bootstrap files\n",
       "---------\n",
-      "Performance for esr - etanercept - class_bin\n",
-      "Acc: 0.2153\n",
-      "Adjusted Acc Measure: 0.2353 +/- 0.0021 (IQR: 0.2332 - 0.2374)\n",
-      "AUC: 0.7086\n",
-      "Adjusted AUC: 0.6574 +/- 0.0060 (IQR: 0.6514 - 0.6634)\n",
-      "Citl_0: 0.0073\n",
-      "Adjusted CITL_0: 0.0100 +/- 0.0269 (IQR: -0.0170 - 0.0369)\n",
-      "Slope_0: 1.0122\n",
-      "Adjusted Cal Slope_0: 0.7471 +/- 0.0409 (IQR: 0.7062 - 0.7879)\n",
+      "Performance for esr - etanercept - class_poor\n",
+      "Acc: 0.147\n",
+      "Adjusted Acc Measure: 0.157 +/- 0.000 (IQR: 0.157 - 0.158)\n",
+      "AUC: 0.717\n",
+      "Adjusted AUC: 0.671 +/- 0.002 (IQR: 0.669 - 0.673)\n",
+      "Citl_0: 0.003\n",
+      "Adjusted CITL_0: -0.277 +/- 0.014 (IQR: -0.291 - -0.263)\n",
+      "Slope_0: 1.001\n",
+      "Adjusted Cal Slope_0: 0.761 +/- 0.011 (IQR: 0.751 - 0.772)\n",
       "---------\n"
      ]
     }
    ],
    "source": [
-    "print_adjusted_metrics('esr', 'etanercept')"
+    "print_adjusted_metrics('esr', 'etanercept', outcome_col = 'class_poor')"
    ]
   },
   {
@@ -152,21 +206,21 @@
      "text": [
       "Processing 500 bootstrap files\n",
       "---------\n",
-      "Performance for crp - adalimumab - class_bin\n",
-      "Acc: 0.2159\n",
-      "Adjusted Acc Measure: 0.2571 +/- 0.0009 (IQR: 0.2563 - 0.2580)\n",
-      "AUC: 0.7150\n",
-      "Adjusted AUC: 0.6221 +/- 0.0034 (IQR: 0.6186 - 0.6255)\n",
-      "Citl_0: -0.0005\n",
-      "Adjusted CITL_0: 0.0193 +/- 0.0020 (IQR: 0.0173 - 0.0213)\n",
-      "Slope_0: 1.0007\n",
-      "Adjusted Cal Slope_0: 0.5033 +/- 0.0145 (IQR: 0.4888 - 0.5179)\n",
+      "Performance for crp - adalimumab - class_poor\n",
+      "Acc: 0.127\n",
+      "Adjusted Acc Measure: 0.141 +/- 0.000 (IQR: 0.141 - 0.141)\n",
+      "AUC: 0.746\n",
+      "Adjusted AUC: 0.683 +/- 0.001 (IQR: 0.682 - 0.684)\n",
+      "Citl_0: 0.000\n",
+      "Adjusted CITL_0: -0.402 +/- 0.005 (IQR: -0.407 - -0.397)\n",
+      "Slope_0: 1.001\n",
+      "Adjusted Cal Slope_0: 0.696 +/- 0.004 (IQR: 0.692 - 0.700)\n",
       "---------\n"
      ]
     }
    ],
    "source": [
-    "print_adjusted_metrics('crp', 'adalimumab')"
+    "print_adjusted_metrics('crp', 'adalimumab', outcome_col = 'class_poor')"
    ]
   },
   {
@@ -180,33 +234,82 @@
      "text": [
       "Processing 500 bootstrap files\n",
       "---------\n",
-      "Performance for esr - adalimumab - class_bin\n",
-      "Acc: 0.1959\n",
-      "Adjusted Acc Measure: 0.2386 +/- 0.0037 (IQR: 0.2348 - 0.2423)\n",
-      "AUC: 0.7683\n",
-      "Adjusted AUC: 0.6818 +/- 0.0112 (IQR: 0.6706 - 0.6930)\n",
-      "Citl_0: 0.0055\n",
-      "Adjusted CITL_0: -0.0284 +/- 0.0197 (IQR: -0.0481 - -0.0087)\n",
-      "Slope_0: 1.0129\n",
-      "Adjusted Cal Slope_0: 0.5971 +/- 0.0461 (IQR: 0.5511 - 0.6432)\n",
+      "Performance for esr - adalimumab - class_poor\n",
+      "Acc: 0.134\n",
+      "Adjusted Acc Measure: 0.152 +/- 0.001 (IQR: 0.152 - 0.153)\n",
+      "AUC: 0.780\n",
+      "Adjusted AUC: 0.722 +/- 0.002 (IQR: 0.720 - 0.725)\n",
+      "Citl_0: -0.001\n",
+      "Adjusted CITL_0: -0.308 +/- 0.011 (IQR: -0.319 - -0.297)\n",
+      "Slope_0: 0.996\n",
+      "Adjusted Cal Slope_0: 0.714 +/- 0.015 (IQR: 0.699 - 0.729)\n",
       "---------\n"
      ]
     }
    ],
    "source": [
-    "print_adjusted_metrics('esr', 'adalimumab')"
+    "print_adjusted_metrics('esr', 'adalimumab', outcome_col = 'class_poor')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing 500 bootstrap files\n",
+      "---------\n",
+      "Performance for crp - eta_ada - class_poor\n",
+      "Acc: 0.141\n",
+      "Adjusted Acc Measure: 0.146 +/- 0.000 (IQR: 0.146 - 0.146)\n",
+      "AUC: 0.680\n",
+      "Adjusted AUC: 0.648 +/- 0.001 (IQR: 0.647 - 0.649)\n",
+      "Citl_0: -0.001\n",
+      "Adjusted CITL_0: -0.247 +/- 0.009 (IQR: -0.256 - -0.237)\n",
+      "Slope_0: 0.999\n",
+      "Adjusted Cal Slope_0: 0.819 +/- 0.006 (IQR: 0.813 - 0.825)\n",
+      "---------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_adjusted_metrics('crp', 'eta_ada', outcome_col = 'class_poor')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing 500 bootstrap files\n",
+      "---------\n",
+      "Performance for esr - eta_ada - class_poor\n",
+      "Acc: 0.148\n",
+      "Adjusted Acc Measure: 0.154 +/- 0.000 (IQR: 0.154 - 0.154)\n",
+      "AUC: 0.708\n",
+      "Adjusted AUC: 0.677 +/- 0.001 (IQR: 0.675 - 0.678)\n",
+      "Citl_0: -0.000\n",
+      "Adjusted CITL_0: -0.198 +/- 0.012 (IQR: -0.210 - -0.186)\n",
+      "Slope_0: 0.999\n",
+      "Adjusted Cal Slope_0: 0.834 +/- 0.007 (IQR: 0.826 - 0.841)\n",
+      "---------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_adjusted_metrics('esr', 'eta_ada', outcome_col = 'class_poor')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -216,18 +319,18 @@
       "Processing 500 bootstrap files\n",
       "---------\n",
       "Performance for crp - etanercept - class\n",
-      "Acc: 0.5754\n",
-      "Adjusted Acc Measure: 0.5270 +/- 0.0049 (IQR: 0.5221 - 0.5319)\n",
-      "AUC: 0.6892\n",
-      "Adjusted AUC: 0.6150 +/- 0.0044 (IQR: 0.6106 - 0.6194)\n",
-      "Citl_0: -0.3672\n",
-      "Adjusted CITL_0: -0.4413 +/- 0.0033 (IQR: -0.4446 - -0.4380)\n",
-      "Citl_1: -0.9426\n",
-      "Adjusted CITL_1: -1.2002 +/- 0.0106 (IQR: -1.2108 - -1.1896)\n",
-      "Slope_0: 0.7361\n",
-      "Adjusted Cal Slope_0: 0.4870 +/- 0.0123 (IQR: 0.4747 - 0.4992)\n",
-      "Slope_1: 0.7327\n",
-      "Adjusted Cal Slope_1: 0.4587 +/- 0.0254 (IQR: 0.4334 - 0.4841)\n",
+      "Acc: 0.542\n",
+      "Adjusted Acc Measure: 0.511 +/- 0.001 (IQR: 0.510 - 0.513)\n",
+      "AUC: 0.693\n",
+      "Adjusted AUC: 0.654 +/- 0.001 (IQR: 0.653 - 0.655)\n",
+      "Citl_0: -0.442\n",
+      "Adjusted CITL_0: -0.420 +/- 0.002 (IQR: -0.423 - -0.418)\n",
+      "Citl_1: -1.042\n",
+      "Adjusted CITL_1: -1.102 +/- 0.009 (IQR: -1.110 - -1.093)\n",
+      "Slope_0: 0.694\n",
+      "Adjusted Cal Slope_0: 0.573 +/- 0.003 (IQR: 0.569 - 0.576)\n",
+      "Slope_1: 0.676\n",
+      "Adjusted Cal Slope_1: 0.531 +/- 0.009 (IQR: 0.522 - 0.541)\n",
       "---------\n"
      ]
     }
@@ -238,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -248,56 +351,24 @@
       "Processing 500 bootstrap files\n",
       "---------\n",
       "Performance for esr - etanercept - class\n",
-      "Acc: 0.5518\n",
-      "Adjusted Acc Measure: 0.5008 +/- 0.0026 (IQR: 0.4982 - 0.5034)\n",
-      "AUC: 0.6951\n",
-      "Adjusted AUC: 0.6250 +/- 0.0042 (IQR: 0.6208 - 0.6293)\n",
-      "Citl_0: -0.3770\n",
-      "Adjusted CITL_0: -0.4167 +/- 0.0101 (IQR: -0.4267 - -0.4066)\n",
-      "Citl_1: -0.9147\n",
-      "Adjusted CITL_1: -1.1384 +/- 0.0197 (IQR: -1.1581 - -1.1186)\n",
-      "Slope_0: 0.7960\n",
-      "Adjusted Cal Slope_0: 0.5355 +/- 0.0463 (IQR: 0.4892 - 0.5818)\n",
-      "Slope_1: 0.7460\n",
-      "Adjusted Cal Slope_1: 0.4662 +/- 0.0055 (IQR: 0.4607 - 0.4718)\n",
+      "Acc: 0.547\n",
+      "Adjusted Acc Measure: 0.513 +/- 0.006 (IQR: 0.508 - 0.519)\n",
+      "AUC: 0.704\n",
+      "Adjusted AUC: 0.665 +/- 0.001 (IQR: 0.665 - 0.666)\n",
+      "Citl_0: -0.464\n",
+      "Adjusted CITL_0: -0.407 +/- 0.010 (IQR: -0.416 - -0.397)\n",
+      "Citl_1: -1.113\n",
+      "Adjusted CITL_1: -1.126 +/- 0.005 (IQR: -1.131 - -1.121)\n",
+      "Slope_0: 0.740\n",
+      "Adjusted Cal Slope_0: 0.609 +/- 0.005 (IQR: 0.604 - 0.614)\n",
+      "Slope_1: 0.700\n",
+      "Adjusted Cal Slope_1: 0.551 +/- 0.008 (IQR: 0.543 - 0.558)\n",
       "---------\n"
      ]
     }
    ],
    "source": [
     "print_adjusted_metrics('esr', 'etanercept', outcome_col = 'class')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing 500 bootstrap files\n",
-      "---------\n",
-      "Performance for crp - adalimumab - class\n",
-      "Acc: 0.5970\n",
-      "Adjusted Acc Measure: 0.5011 +/- 0.0050 (IQR: 0.4961 - 0.5061)\n",
-      "AUC: 0.7312\n",
-      "Adjusted AUC: 0.6196 +/- 0.0022 (IQR: 0.6174 - 0.6218)\n",
-      "Citl_0: -0.3589\n",
-      "Adjusted CITL_0: -0.4614 +/- 0.0027 (IQR: -0.4641 - -0.4587)\n",
-      "Citl_1: -0.8019\n",
-      "Adjusted CITL_1: -1.1121 +/- 0.0080 (IQR: -1.1201 - -1.1041)\n",
-      "Slope_0: 0.8246\n",
-      "Adjusted Cal Slope_0: 0.4369 +/- 0.0120 (IQR: 0.4249 - 0.4489)\n",
-      "Slope_1: 0.8179\n",
-      "Adjusted Cal Slope_1: 0.4376 +/- 0.0187 (IQR: 0.4189 - 0.4563)\n",
-      "---------\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_adjusted_metrics('crp', 'adalimumab', outcome_col = 'class')"
    ]
   },
   {
@@ -311,25 +382,89 @@
      "text": [
       "Processing 500 bootstrap files\n",
       "---------\n",
+      "Performance for crp - adalimumab - class\n",
+      "Acc: 0.572\n",
+      "Adjusted Acc Measure: 0.519 +/- 0.009 (IQR: 0.510 - 0.527)\n",
+      "AUC: 0.714\n",
+      "Adjusted AUC: 0.656 +/- 0.001 (IQR: 0.655 - 0.657)\n",
+      "Citl_0: -0.443\n",
+      "Adjusted CITL_0: -0.415 +/- 0.001 (IQR: -0.417 - -0.414)\n",
+      "Citl_1: -1.160\n",
+      "Adjusted CITL_1: -1.209 +/- 0.004 (IQR: -1.213 - -1.204)\n",
+      "Slope_0: 0.434\n",
+      "Adjusted Cal Slope_0: 0.284 +/- 0.003 (IQR: 0.281 - 0.287)\n",
+      "Slope_1: 0.569\n",
+      "Adjusted Cal Slope_1: 0.443 +/- 0.003 (IQR: 0.439 - 0.446)\n",
+      "---------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_adjusted_metrics('crp', 'adalimumab', outcome_col = 'class')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing 500 bootstrap files\n",
+      "---------\n",
       "Performance for esr - adalimumab - class\n",
-      "Acc: 0.6221\n",
-      "Adjusted Acc Measure: 0.5174 +/- 0.0058 (IQR: 0.5116 - 0.5232)\n",
-      "AUC: 0.7745\n",
-      "Adjusted AUC: 0.6640 +/- 0.0077 (IQR: 0.6562 - 0.6717)\n",
-      "Citl_0: -0.3771\n",
-      "Adjusted CITL_0: -0.3822 +/- 0.0151 (IQR: -0.3973 - -0.3671)\n",
-      "Citl_1: -1.3787\n",
-      "Adjusted CITL_1: -1.5760 +/- 0.0096 (IQR: -1.5856 - -1.5663)\n",
-      "Slope_0: 0.8005\n",
-      "Adjusted Cal Slope_0: 0.4979 +/- 0.0170 (IQR: 0.4810 - 0.5149)\n",
-      "Slope_1: 0.2924\n",
-      "Adjusted Cal Slope_1: 0.0291 +/- 0.0074 (IQR: 0.0217 - 0.0364)\n",
+      "Acc: 0.585\n",
+      "Adjusted Acc Measure: 0.524 +/- 0.011 (IQR: 0.513 - 0.535)\n",
+      "AUC: 0.745\n",
+      "Adjusted AUC: 0.684 +/- 0.002 (IQR: 0.682 - 0.686)\n",
+      "Citl_0: -0.393\n",
+      "Adjusted CITL_0: -0.296 +/- 0.003 (IQR: -0.299 - -0.292)\n",
+      "Citl_1: -1.181\n",
+      "Adjusted CITL_1: -1.160 +/- 0.018 (IQR: -1.178 - -1.142)\n",
+      "Slope_0: 0.532\n",
+      "Adjusted Cal Slope_0: 0.354 +/- 0.008 (IQR: 0.346 - 0.361)\n",
+      "Slope_1: 0.687\n",
+      "Adjusted Cal Slope_1: 0.531 +/- 0.007 (IQR: 0.524 - 0.537)\n",
       "---------\n"
      ]
     }
    ],
    "source": [
     "print_adjusted_metrics('esr', 'adalimumab', outcome_col = 'class')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing 500 bootstrap files\n",
+      "---------\n",
+      "Performance for esr - eta_ada - class\n",
+      "Acc: 0.546\n",
+      "Adjusted Acc Measure: 0.522 +/- 0.002 (IQR: 0.520 - 0.524)\n",
+      "AUC: 0.694\n",
+      "Adjusted AUC: 0.665 +/- 0.001 (IQR: 0.664 - 0.666)\n",
+      "Citl_0: -0.444\n",
+      "Adjusted CITL_0: -0.394 +/- 0.005 (IQR: -0.398 - -0.389)\n",
+      "Citl_1: -1.088\n",
+      "Adjusted CITL_1: -1.101 +/- 0.009 (IQR: -1.110 - -1.092)\n",
+      "Slope_0: 0.699\n",
+      "Adjusted Cal Slope_0: 0.593 +/- 0.004 (IQR: 0.589 - 0.598)\n",
+      "Slope_1: 0.740\n",
+      "Adjusted Cal Slope_1: 0.635 +/- 0.006 (IQR: 0.629 - 0.641)\n",
+      "---------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_adjusted_metrics('esr', 'eta_ada', outcome_col = 'class')"
    ]
   },
   {
